WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20035
[GTK] Fix return value for webkit_web_view_go_to_back_forward_item()
https://bugs.webkit.org/show_bug.cgi?id=20035
Summary
[GTK] Fix return value for webkit_web_view_go_to_back_forward_item()
Wouter Bolsterlee
Reported
2008-07-14 16:51:58 PDT
Currently webkit_web_view_go_to_back_forward_item() always returns TRUE. There's a FIXME in the code to change this. Find attached a patch that changes this into a more suitable return value. Note that the Objective-C docs at
http://developer.apple.com/documentation/Cocoa/Reference/WebKit/Classes/WebView_Class/Reference/Reference.html#//apple_ref/occ/instm/WebView/goToBackForwardItem
: seem to suggest this approach as well.
Attachments
Proposed fix
(1.28 KB, patch)
2008-07-14 16:54 PDT
,
Wouter Bolsterlee
no flags
Details
Formatted Diff
Diff
Updated patch
(1.24 KB, patch)
2008-07-14 17:12 PDT
,
Wouter Bolsterlee
eric
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wouter Bolsterlee
Comment 1
2008-07-14 16:54:55 PDT
Created
attachment 22274
[details]
Proposed fix
Wouter Bolsterlee
Comment 2
2008-07-14 17:06:07 PDT
02:03:33 < bdash> uws:
https://bugs.webkit.org/attachment.cgi?id=22274&action=prettypatch
-- the declaration and assignment should be on the same line, and the variable name should match our coding style guidelines
Wouter Bolsterlee
Comment 3
2008-07-14 17:12:42 PDT
Created
attachment 22275
[details]
Updated patch
Eric Seidel (no email)
Comment 4
2008-08-01 17:00:43 PDT
Comment on
attachment 22275
[details]
Updated patch Looks fine.
Jan Alonzo
Comment 5
2008-08-01 22:20:24 PDT
landed in
r35522
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug