2008-08-01  Wouter Bolsterlee  <uws@xs4all.nl>

https://bugs.webkit.org/show_bug.cgi?id=20035
        [GTK] Fix return value for webkit_web_view_go_to_back_forward_item()

        * webkit/webkitwebview.cpp:

Canonical link: https://commits.webkit.org/27940@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35522 268f45cc-cd09-0410-ab3c-d52691b4dbfc